Allow to get invoice number end point
